tests/fixtures/security/certs/invalid/direct_missing_root.eval
subject_fingerprint=7777777777777777777777777777777777777777777777777777777777777777
validation_time_utc=2026-03-11T08:30:00Z
revocation_policy=require_good
